<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csci3130.athletetracker.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_weight="0.65"
            app:srcCompat="@drawable/peoplerunning" />

        <Button
            android:id="@+id/b_gotoSetRangeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set Ranges" />

        <Button
            android:id="@+id/b_gotoSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Send Athlete Message" />

        <Button
            android:id="@+id/b_gotoHistoricalData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Historical Data" />

        <Button
            android:id="@+id/b_notifyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Notification Button"
            android:visibility="gone" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
