...
    <string name="title_notifications">Notifications</string>
    
    <!--GENERAL-->
    <!--<string name="app_name">Hexiwear</string>-->
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">OK</string>
    <string name="dismiss">dismiss</string>
    <string name="cancel">Cancel</string>
    <string name="empty" />

    <!--LOGIN-->
    <string name="login_activity_title">LoginActivity</string>
...
